# llm-cocktail-book

./: .env.example  Makefile  README.md  compose.dev.yml  compose.local.yml  compose.test.yml
app/e2e/: pyproject.toml
app/e2e/tests/example/: test_lp.py
app/webapi/: .env.example  .gitignore  Makefile  README.md  alembic.ini  main.py  pyproject.toml
app/webapi/migrations/: README.md  env.py
app/webapi/migrations/versions/: 1fdc9f2b739e_add.py  4f4ffecc7823_add_chatbot_index.py  65be6135cdfc_.py  98535b85e5b2_init.py  9e661ffc9b64_add_chat.py
app/webapi/src/application/: credential.py
app/webapi/src/application/account/: __init__.py  account_profile_usecase.py  account_query.py  account_secret_usecase.py
app/webapi/src/application/chatbot/: __init__.py  chatbot_index_model.py  chatbot_index_usecase.py  chatbot_message_usecase.py  chatbot_query.py  chatbot_usecase.py  model.py  usecase.py
app/webapi/src/application/core/: __init__.py  model.py
app/webapi/src/application/credit/: __init__.py  credit_order_model.py  credit_order_usecase.py  credit_transaction_usecase.py  credit_usecase.py
app/webapi/src/application/oauth/: __init__.py  model.py  oauth_password_model.py  oauth_password_usecase.py  oauth_refresh_usecase.py  oauth_signup_model.py  oauth_signup_usecase.py
app/webapi/src/application/payment/: __init__.py  payment_model.py  payment_usecase.py
app/webapi/src/application/webhook/: __init__.py  stripe_webhook_usecase.py
app/webapi/src/domain/: entity.py  model.py
app/webapi/src/domain/credit/: __init__.py  (+6 more)
app/webapi/tests/e2e/: conftest.py
(+443 files in other folders)
