[tool.poetry]
name = "e2e"
version = "0.1.0"
description = ""
authors = ["fumizaki"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.49.1"
pytest = "^8.3.4"
pytest-playwright = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
