[tool.poetry]
name = "webapi"
version = "0.1.0"
description = ""
authors = ["fumizaki"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
mypy = "^1.11.1"
fastapi = {extras = ["all"], version = "^0.112.0"}
requests = "^2.32.3"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.9.0"
gunicorn = "^23.0.0"
bcrypt = "^4.2.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pyyaml = "^6.0.2"
redis = "^5.1.0"
openai = "^1.51.0"
qdrant-client = "^1.11.3"
resend = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
